Add barebones static page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-Hello World
+<html>
+	<head>
+		<style>
+			body {
+				padding-left: 200px;
+				padding-top: 100px;
+				width: 600px;
+				color: #4d4d4d;
+			}
+			a {
+				color: #4d4d4d;
+			}
+			a:hover {
+				color: #99ffe6;
+			}
+			h1 {
+				font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
+				font-size: 23px;
+				font-style: normal;
+				font-variant: normal;
+				font-weight: 500;
+				line-height: 23px;
+			}
+			h3 {
+				font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
+				font-size: 17px;
+				font-style: normal;
+				font-variant: normal;
+				font-weight: 500;
+				line-height: 23px;
+			}
+			p {
+				font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
+				font-size: 14px;
+				font-style: normal;
+				font-variant: normal;
+				font-weight: 400;
+				line-height: 23px;
+			}
+			pre {
+				font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
+				font-size: 11px;
+				font-style: normal;
+				font-variant: normal;
+				font-weight: 400;
+				line-height: 23px;
+			}
+		</style>
+	</head>
+	<body>
+		<h1>Stephanie Bian</h1>
+		<h3>Bio</h3>
+		<p>
+			Midwest transplant in San Francisco.
+		</p>
+		<h3>Past</h3>
+		<p>Twitter, Massachusetts Institute of Technology, Cambridge University</p>
+		<p>
+		</p>
+		<h3>Social</h3>
+		<p>
+		<a href="http://twitter.com/stephbian">Twitter</a>, <a href="https://www.linkedin.com/in/stephaniebian">LinkedIn</a>
+		</p>
+	</body>
+</html>
