--- a/index.html
+++ b/index.html
@@ -1,65 +1,75 @@
 <html>
-	<head>
-		<style>
-			body {
-				padding-left: 200px;
-				padding-top: 100px;
-				width: 600px;
-				color: #4d4d4d;
-			}
-			a {
-				color: #4d4d4d;
-			}
-			a:hover {
-				color: #99ffe6;
-			}
-			h1 {
-				font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
-				font-size: 23px;
-				font-style: normal;
-				font-variant: normal;
-				font-weight: 500;
-				line-height: 23px;
-			}
-			h3 {
-				font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
-				font-size: 17px;
-				font-style: normal;
-				font-variant: normal;
-				font-weight: 500;
-				line-height: 23px;
-			}
-			p {
-				font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
-				font-size: 14px;
-				font-style: normal;
-				font-variant: normal;
-				font-weight: 400;
-				line-height: 23px;
-			}
-			pre {
-				font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
-				font-size: 11px;
-				font-style: normal;
-				font-variant: normal;
-				font-weight: 400;
-				line-height: 23px;
-			}
-		</style>
-	</head>
-	<body>
-		<h1>Stephanie Bian</h1>
-		<h3>Bio</h3>
-		<p>
-			Midwest transplant in San Francisco.
-		</p>
-		<h3>Past</h3>
-		<p>Twitter, Massachusetts Institute of Technology, Cambridge University</p>
-		<p>
-		</p>
-		<h3>Social</h3>
-		<p>
-		<a href="http://twitter.com/stephbian">Twitter</a>, <a href="https://www.linkedin.com/in/stephaniebian">LinkedIn</a>
-		</p>
-	</body>
+    <head>
+        <link rel="icon" href="favicon.ico"/>
+        <style>
+            body {
+                padding-left: 200px;
+                padding-top: 100px;
+                width: 600px;
+                color: #4d4d4d;
+            }
+            a {
+                color: #4d4d4d;
+            }
+            a:hover {
+                color: #99ffe6;
+            }
+            h1 {
+                font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
+                font-size: 23px;
+                font-style: normal;
+                font-variant: normal;
+                font-weight: 500;
+                line-height: 23px;
+            }
+            h3 {
+                font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
+                font-size: 17px;
+                font-style: normal;
+                font-variant: normal;
+                font-weight: 500;
+                line-height: 23px;
+            }
+            p, ul {
+                font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
+                font-size: 14px;
+                font-style: normal;
+                font-variant: normal;
+                font-weight: 400;
+                line-height: 23px;
+            }
+            pre {
+                font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
+                font-size: 11px;
+                font-style: normal;
+                font-variant: normal;
+                font-weight: 400;
+                line-height: 23px;
+            }
+        </style>
+        <title>Stephanie Bian</title>
+    </head>
+    <body>
+        <h1>Stephanie Bian</h1>
+        <p>
+            Backend engineer in San Francisco focused on building quality relevance products. Currently a data engineer at <a href="http://brigade.com">Brigade</a> working on data infrastructure, analytics, relevance, and various micro-services. Always looking for something new to learn.
+        </p>
+
+        <h3>Past</h3>
+        <ul>
+            <li>
+                Twitter - Software engineer on the Trends+Events team, 2012 - 2014. Responsible for API endpoints and numerous relevance-related features and experiments.
+            </li>
+            <li>
+                Massachusetts Institute of Technology - Bachelor of Science in Computer Engineering, 2008 - 2012.
+            </li>
+            <li>
+                Cambridge University - Part IB of Computer Science Tripos, 2010-2011.
+            </li>
+        </ul>
+        <h3>Social</h3>
+        <p>
+        <a href="http://twitter.com/stephbian">Twitter</a>, <a href="https://www.linkedin.com/in/stephaniebian">LinkedIn</a>
+        </p>
+    </body>
 </html>
