--- a/index.html
+++ b/index.html
@@ -52,13 +52,16 @@
     <body>
         <h1>Stephanie Bian</h1>
         <p>
-            Backend engineer in San Francisco focused on building quality relevance products. Currently a data engineer at <a href="http://brigade.com">Brigade</a> working on data infrastructure, analytics, relevance, and various micro-services. Always looking for something new to learn.
+            Backend software engineer in San Francisco interested in building meaningful relevance products.
         </p>
 
         <h3>Past</h3>
         <ul>
             <li>
-                Twitter - Software engineer on the Trends+Events team, 2012 - 2014. Responsible for API endpoints and numerous relevance-related features and experiments.
+                Brigade - Data engineer, 2015 - 2016. Built out data infrastructure, analytics, relevance, and micro-services using Scala, Finagle, and Spark.
+            </li>
+            <li>
+                Twitter - Software engineer on the Trends+Events team, 2012 - 2014. Developed numerous relevance-related features/experiments and built/maintained Scala API endpoints.
             </li>
             <li>
                 Massachusetts Institute of Technology - Bachelor of Science in Computer Engineering, 2008 - 2012.
