Add nav and fix photo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Stephanie Bian</title>
     </head>
     <body>
-        <h1>Stephanie Bian</h1>
+        <h1><a href=''>Stephanie Bian</a></h1>
         <p>
             Cat-lady from Chicagoland making a living in San Francisco as a software engineer. Currently working on machine learning problems. Loves Scala, coffee, hip-hop, and bouldering. Please don't ask me to write javascript.
         </p>
