--- a/photography/new_zealand.html
+++ b/photography/new_zealand.html
@@ -2,18 +2,19 @@
     <head>
         <link rel="icon" href="../resources/favicon.ico"/>
         <link rel="stylesheet" type="text/css" href="../style.css">
-        <title>Stephanie Bian / Photography / Scenes from New Zealand</title>
+        <title>Stephanie Bian/Photography/Scenes from New Zealand</title>
     </head>
     <body>
-    <h1> Stephanie Bian / Photography / Scenes from New Zealand</h1>
-    <h3>Scenes from New Zealand</h3>
-        <img src='../resources/photos/new_zealand/000.jpg'>
-        <img src='../resources/photos/new_zealand/001.jpg'>
-        <img src='../resources/photos/new_zealand/002.jpg'>
-        <img src='../resources/photos/new_zealand/003.jpg'>
-        <img src='../resources/photos/new_zealand/004.jpg'>
-        <img src='../resources/photos/new_zealand/005.jpg'>
-        <img src='../resources/photos/new_zealand/006.jpg'>
-        <img src='../resources/photos/new_zealand/007.jpg'>
+    <h1><a href='../index.html'>Stephanie Bian</a>/<a href='index.html'>Photography</a>/
+    <br>
+    <a href=''>Scenes from New Zealand</a></h1>
+    <img src='../resources/photos/new_zealand/000.jpg'>
+    <img src='../resources/photos/new_zealand/001.jpg'>
+    <img src='../resources/photos/new_zealand/002.jpg'>
+    <img src='../resources/photos/new_zealand/003.jpg'>
+    <img src='../resources/photos/new_zealand/004.jpg'>
+    <img src='../resources/photos/new_zealand/005.jpg'>
+    <img src='../resources/photos/new_zealand/006.jpg'>
+    <img src='../resources/photos/new_zealand/007.jpg'>
     </body>
 </html>
