--- a/resume.html
+++ b/resume.html
@@ -1,56 +1,11 @@
 <html>
     <head>
         <link rel="icon" href="favicon.ico"/>
-        <style>
-            body {
-                padding-left: 200px;
-                padding-top: 100px;
-                width: 600px;
-                color: #4d4d4d;
-            }
-            a {
-                color: #4d4d4d;
-            }
-            a:hover {
-                color: #99ffe6;
-            }
-            h1 {
-                font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
-                font-size: 23px;
-                font-style: normal;
-                font-variant: normal;
-                font-weight: 500;
-                line-height: 23px;
-            }
-            h3 {
-                font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
-                font-size: 17px;
-                font-style: normal;
-                font-variant: normal;
-                font-weight: 500;
-                line-height: 23px;
-            }
-            p, ul {
-                font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
-                font-size: 14px;
-                font-style: normal;
-                font-variant: normal;
-                font-weight: 400;
-                line-height: 23px;
-            }
-            pre {
-                font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
-                font-size: 11px;
-                font-style: normal;
-                font-variant: normal;
-                font-weight: 400;
-                line-height: 23px;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>Stephanie Bian / Resume</title>
     </head>
     <body>
-    <h1> Stephanie Bian / Resume</h1>
+    <h1><a href='index.html'>Stephanie Bian</a>/<a href=''>Resume</a></h1>
         <h3>Current</h3>
             <p>
             Software engineer at Stripe working on applied machine learning problems.
