--- a/photography/index.html
+++ b/photography/index.html
@@ -2,10 +2,10 @@
     <head>
         <link rel="icon" href="../resources/favicon.ico"/>
         <link rel="stylesheet" type="text/css" href="../style.css">
-        <title>Stephanie Bian / Photography</title>
+        <title>Stephanie Bian/Photography</title>
     </head>
     <body>
-    <h1> Stephanie Bian / Photography</h1>
+    <h1><a href='../index.html'>Stephanie Bian</a>/<a href=''>Photography</a></h1>
     <p>
     <a href='new_zealand.html'>Scenes from New Zealand</a>
     </p>
