add taiwan photos

--- a/photography/index.html
+++ b/photography/index.html
@@ -9,5 +9,8 @@
     <p>
     <a href='new_zealand.html'>Scenes from New Zealand</a>
     </p>
+    <p>
+    <a href='taiwan.html'>Scenes from Taiwan</a>
+    </p>
     </body>
 </html>
