add uta, budapest, warsaw photos

--- a/photography/index.html
+++ b/photography/index.html
@@ -7,10 +7,15 @@
     <body>
     <h1><a href='../index.html'>Stephanie Bian</a>/<a href=''>Photography</a></h1>
     <p>
-    <a href='new_zealand.html'>Scenes from New Zealand</a>
-    </p>
-    <p>
-    <a href='taiwan.html'>Scenes from Taiwan</a>
+    <a href='new_zealand.html'>New Zealand</a>
+    <br>
+    <a href='taiwan.html'>Taiwan</a>
+    <br>
+    <a href='utah.html'>Utah</a>
+    <br>
+    <a href='warsaw.html'>Warsaw</a>
+    <br>
+    <a href='budapest.html'>Budapest</a>
     </p>
     </body>
 </html>
