--- a/photography/new_zealand.html
+++ b/photography/new_zealand.html
@@ -5,9 +5,7 @@
         <title>Stephanie Bian/Photography/Scenes from New Zealand</title>
     </head>
     <body>
-    <h1><a href='../index.html'>Stephanie Bian</a>/<a href='index.html'>Photography</a>/
-    <br>
-    <a href=''>Scenes from New Zealand</a></h1>
+    <h1><a href='../index.html'>Stephanie Bian</a>/<a href='index.html'>Photography</a>/<a href=''>New Zealand</a></h1>
     <img src='../resources/photos/new_zealand/000.jpg'>
     <img src='../resources/photos/new_zealand/001.jpg'>
     <img src='../resources/photos/new_zealand/002.jpg'>
