--- a/photography/taiwan.html
+++ b/photography/taiwan.html
@@ -5,9 +5,7 @@
         <title>Stephanie Bian/Photography/Scenes from Taiwan</title>
     </head>
     <body>
-    <h1><a href='../index.html'>Stephanie Bian</a>/<a href='index.html'>Photography</a>/
-    <br>
-    <a href=''>Scenes from Taiwan</a></h1>
+    <h1><a href='../index.html'>Stephanie Bian</a>/<a href='index.html'>Photography</a>/<a href=''>Taiwan</a></h1>
     <img src='../resources/photos/taiwan/000.jpg'>
     <img src='../resources/photos/taiwan/001.jpg'>
     <img src='../resources/photos/taiwan/002.jpg'>
